# hismap

./: .gitignore  README.md  pyproject.toml  start.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_credibility_annotations.py  003_add_importance_to_entry_locations.py  004_pipeline_revision.py  005_era_context_to_text.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: author.py  book.py  journal_entry.py  location.py
backend/app/models/: __init__.py  associations.py  author.py  (+4 more)
backend/hismap_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
pipeline/: .env.example  chapter_detector.py  draft_ocr_improved.py  draft_toc_mapper.py  models.py  requirements.txt  retry_failed.py  runner.py  verify_pipeline.py
pipeline/config/: config.yaml
pipeline/core/: db.py  llm_client.py  ocr.py  pdf_parser.py
pipeline/review/: app.py
pipeline/scripts/: process_test_book.py
pipeline/stages/: book_summary.py  s1_ingest.py  s2_segment.py  s3_extract.py  s4_geocode.py  s4_output.py  s5_translate.py  s6_analyze.py  s7_output.py
pipeline/tests/: test_integration.py  test_llm_client.py  test_models.py  test_runner.py  test_s1_ingest.py  test_s2_segment.py  test_s3_extract.py  test_s4_ibn_battuta.py  test_s4_output.py  verify_pipeline.py
(+74 files in other folders)
